--- a/client/index.html
+++ b/client/index.html
@@ -54,7 +54,7 @@
         </div>
     </section>
 
-    <!-- Footer with Contact Info, Social Links, and Copyright -->
+    <!--- Footer with Contact Info, Social Links, and Copyright --->
     <footer class="footer">
         <div class="footer-section">
             <h3>Contact Information</h3>
