--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growth99</title>
-    <link rel="stylesheet" href="./Assets/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!-- Header with Logo and Navigation -->
     <header class="header">
          <div class="logo">
-            <img src="./Assets/images/logo.png" alt="Company Logo"> 
+            <img src="./images/logo.png" alt="Company Logo"> 
         </div>
         <h1 >Growth99</h1>
         <nav class="nav">
@@ -70,7 +70,7 @@
         </div>
     </footer>
 
-    <script src="./Assets/js/index.js">
+    <script src="./js/index.js">
        
     </script>
 </body>
